kind/k8s/student-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-tracker
  namespace: student-tracker
  labels:
    app: student-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-tracker
  template:
    metadata:
      labels:
        app: student-tracker
    spec:
      containers:
        - name: student-tracker
          image: biwunor/student-tracker:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
