kind/k8s/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-tracker-service
  namespace: student-tracker
spec:
  selector:
    app: student-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
