kind/k8s/student-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-tracker-ingress
  namespace: student-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ec2-54-170-56-216.eu-west-1.compute.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-tracker-service
                port:
                  number: 80
